--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,14 @@
 					<cloudHubDeployment>
 						<uri>https://anypoint.mulesoft.com</uri>
 						<muleVersion>${mule.version}</muleVersion>
-						<username>${anypoint.username}</username>
-						<password>${anypoint.password}</password>
-						<environment>${env}</environment>
-						<applicationName>${appname}</applicationName>
-						<businessGroup>${business}</businessGroup>
-						<workerType>${vCore}</workerType>
-						<workers>${workers}</workers>
+						<username>laxmaiahd</username>
+						<password>Laxman@84</password>
+						<environment>Sandbox</environment>
+						<applicationName>WorldTimeZone</applicationName>
+						<businessGroup>personsl</businessGroup>
+						<workerType>Micro</workerType>
+						<workers>1</workers>
+						<muleVersion>4.3.0</muleVersion>
 						<objectStoreV2>true</objectStoreV2>
 					</cloudHubDeployment>
 				</configuration>
